# EMerge

./: .gitignore  Demo1_Mesh.msh  README.md  bma_1_waveguide_test.py  boundary_selection_test.py  demo1_stepped_imp_filter.py  demo2_combline_filter.py  demo2_tbd.py  demo2_tbd_internet.py  demo3_filter_internet.py  demo3_patch_antenna.py  extrustion_test.py  meshname.msh  meshname.msh.msh  pcb_maker_test.py  pcbmesh.msh  pyproject.toml  test_simple_waveguide.py  update_emerge.py
OLD_CRAP/: blog_demo_filter_horn.py  chatgpttest.py  color_map_test.py  domain.py  duvanant_test.py  duvanant_triangle.py  eigenmode2d.py  geo_3d_1.py  geo_3d_cavity.py  geo_3d_cavity_second_order.py  math_test.py  mesh.py  microstrip_3d_test.py  plane_fit_test.py  test_library.py  tet2d_math_plot.py  volo_test.py  waveguide3d.py  waveguide3d_quad.py  waveguide3d_selection.py  waveguide_3d_bma.py
__pycache__/: numba_speed_test.convert_v1-28.py310.1.nbc  numba_speed_test.convert_v1-28.py310.nbi  numba_speed_test.function1-73.py310.1.nbc  numba_speed_test.function1-73.py310.nbi  numba_speed_test.function1-75.py310.1.nbc  numba_speed_test.function1-75.py310.nbi  numba_speed_test.function1_2-102.py310.1.nbc  numba_speed_test.function1_2-102.py310.nbi  numba_speed_test.function1_2-103.py310.1.nbc  numba_speed_test.function1_2-103.py310.nbi  numba_speed_test.function1_2-106.py310.1.nbc  numba_speed_test.function1_2-106.py310.nbi  numba_speed_test.function1_2-110.py310.1.nbc  numba_speed_test.function1_2-110.py310.nbi  numba_speed_test.function1_2-146.py310.1.nbc  numba_speed_test.function2-80.py310.nbi  (+36 more)
(+929 files in other folders)
