[project]
name = "EMerge"
version = "0.1.0"
description = "An Open-Source FEM EM Simulator"
authors = ["Robert Fennis fennisrobert@gmail.com"]
license = "GPL-2.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
"numpy",
"scipy",
"pypardiso",
"gmsh",
"loguru",
"numba",
"matplotlib"
"pyvista"
"numba-progress",
"threadpoolctl"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
